# agents

./: .gitignore  AGENTIC-SYSTEM-PROMPT-STYLE-GUIDE.md  AGENTS.md  AI-AVATAR-PROMPT-STYLING-GUIDE.md  ARMIS_AGENT_IMPROVEMENTS_SUMMARY.md  COMMAND_IMPLEMENTATION.md  OPENCODE_COMPLIANCE_REPORT.md  README.md  UPDATE_SUMMARY.md  armis-query-agent.md  armis-query.md  future-note-on-profile-images.md  soc-analyst.md
.opencode/agent/: armis-query-agent.md  soc-analyst.md
.opencode/agents/: ai-nyx-the-red-teamer.md  armis-query-agent.md  casey-the-compliance-analyst.md  cisoinabox.md  cody-the-code-security-analyst.md  john-anderton-procog-analyst-clone.md  logan-the-log-analyst.md  madison-the-cybersecurity-manager.md  soc-analyst.md  sonny-the-soc-analyst.md  splunk-assistant.md  stacey-the-scripter.md  tim-the-threat-intel-analyst.md
.opencode/commands/: search-armis.md  search-device.md  search-vulnerabilities.md  sync.md
.opencode/skills/: README.md  operational-framework.md
.opencode/skills/splunk-alert/: SKILL.md
.opencode/skills/splunk-discovery/: SKILL.md
.opencode/skills/splunk-export/: SKILL.md
.opencode/skills/splunk-kvstore/: SKILL.md
.opencode/skills/splunk-mcp/: SKILL.md
.opencode/skills/splunk-savedsearch/: SKILL.md
.opencode/skills/splunk-search/: SKILL.md
docs/: internal-workflows.md
openwebui/: __main__.py  chat.py  cli.py  client.py  functions.py  generate_image.py  knowledge.py  models.py  opencode.py  prompts.py  pyproject.toml  skills.py  sync.py  tools.py
