[project]
name = "openwebui-tools"
version = "0.1.0"
description = "Simple exploration tools for the OpenWebUI REST API"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
